cp_model/log.txt
exp.cpp:22:14: error: no match for ‘operator<<’ (operand types are ‘tiny_dnn::layer’ and ‘tiny_dnn::activation::relu() {aka tiny_dnn::relu_layer()}’)
     << conv1 << relu 
              ^
In file included from tiny-dnn/tiny_dnn/lossfunctions/loss_function.h:12:0,
                 from tiny-dnn/tiny_dnn/network.h:26,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/util/util.h:197:9: note: candidate: template<class Stream, class T> Stream& tiny_dnn::operator<<(Stream&, const tiny_dnn::index3d<T>&)
 Stream &operator<<(Stream &s, const index3d<T> &d) {
         ^
tiny-dnn/tiny_dnn/util/util.h:197:9: note:   template argument deduction/substitution failed:
exp.cpp:22:17: note:   mismatched types ‘const tiny_dnn::index3d<T>’ and ‘tiny_dnn::activation::relu() {aka tiny_dnn::relu_layer()}’
     << conv1 << relu 
                 ^
In file included from tiny-dnn/tiny_dnn/lossfunctions/loss_function.h:12:0,
                 from tiny-dnn/tiny_dnn/network.h:26,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/util/util.h:203:15: note: candidate: template<class T> std::ostream& tiny_dnn::operator<<(std::ostream&, const tiny_dnn::index3d<T>&)
 std::ostream &operator<<(std::ostream &s, const index3d<T> &d) {
               ^
tiny-dnn/tiny_dnn/util/util.h:203:15: note:   template argument deduction/substitution failed:
exp.cpp:22:5: note:   cannot convert ‘tiny_dnn::operator<<(input_layer1.tiny_dnn::input_layer::<anonymous>, conv1.tiny_dnn::convolutional_layer::<anonymous>)’ (type ‘tiny_dnn::layer’) to type ‘std::ostream& {aka std::basic_ostream<char>&}’
     << conv1 << relu 
     ^
In file included from tiny-dnn/tiny_dnn/lossfunctions/loss_function.h:12:0,
                 from tiny-dnn/tiny_dnn/network.h:26,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/util/util.h:209:9: note: candidate: template<class Stream, class T> Stream& tiny_dnn::operator<<(Stream&, const std::vector<tiny_dnn::index3d<T> >&)
 Stream &operator<<(Stream &s, const std::vector<index3d<T>> &d) {
         ^
tiny-dnn/tiny_dnn/util/util.h:209:9: note:   template argument deduction/substitution failed:
exp.cpp:22:17: note:   mismatched types ‘const std::vector<tiny_dnn::index3d<T> >’ and ‘tiny_dnn::activation::relu() {aka tiny_dnn::relu_layer()}’
     << conv1 << relu 
                 ^
In file included from tiny-dnn/tiny_dnn/lossfunctions/loss_function.h:12:0,
                 from tiny-dnn/tiny_dnn/network.h:26,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/util/util.h:295:22: note: candidate: std::ostream& tiny_dnn::operator<<(std::ostream&, tiny_dnn::vector_type)
 inline std::ostream &operator<<(std::ostream &os, vector_type vtype) {
                      ^
tiny-dnn/tiny_dnn/util/util.h:295:22: note:   no known conversion for argument 1 from ‘tiny_dnn::layer’ to ‘std::ostream& {aka std::basic_ostream<char>&}’
In file included from tiny-dnn/tiny_dnn/core/backend.h:18:0,
                 from tiny-dnn/tiny_dnn/layers/layer.h:22,
                 from tiny-dnn/tiny_dnn/nodes.h:21,
                 from tiny-dnn/tiny_dnn/network.h:27,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/node.h:222:28: note: candidate: template<class T, class U> std::shared_ptr<_Tp2>& tiny_dnn::operator<<(std::shared_ptr<_Tp1>&, std::shared_ptr<_Tp2>&)
 inline std::shared_ptr<U> &operator<<(std::shared_ptr<T> &lhs,
                            ^
tiny-dnn/tiny_dnn/node.h:222:28: note:   template argument deduction/substitution failed:
exp.cpp:22:17: note:   ‘tiny_dnn::layer’ is not derived from ‘std::shared_ptr<_Tp1>’
     << conv1 << relu 
                 ^
In file included from tiny-dnn/tiny_dnn/core/backend.h:18:0,
                 from tiny-dnn/tiny_dnn/layers/layer.h:22,
                 from tiny-dnn/tiny_dnn/nodes.h:21,
                 from tiny-dnn/tiny_dnn/network.h:27,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/node.h:229:11: note: candidate: template<class T> T& tiny_dnn::operator<<(const tiny_dnn::layer_tuple<std::shared_ptr<tiny_dnn::layer> >&, T&)
 inline T &operator<<(const layer_tuple<std::shared_ptr<layer>> &lhs, T &rhs) {
           ^
tiny-dnn/tiny_dnn/node.h:229:11: note:   template argument deduction/substitution failed:
exp.cpp:22:5: note:   cannot convert ‘tiny_dnn::operator<<(input_layer1.tiny_dnn::input_layer::<anonymous>, conv1.tiny_dnn::convolutional_layer::<anonymous>)’ (type ‘tiny_dnn::layer’) to type ‘const tiny_dnn::layer_tuple<std::shared_ptr<tiny_dnn::layer> >&’
     << conv1 << relu 
     ^
In file included from tiny-dnn/tiny_dnn/core/backend.h:18:0,
                 from tiny-dnn/tiny_dnn/layers/layer.h:22,
                 from tiny-dnn/tiny_dnn/nodes.h:21,
                 from tiny-dnn/tiny_dnn/network.h:27,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/node.h:237:51: note: candidate: template<class T> const tiny_dnn::layer_tuple<std::shared_ptr<tiny_dnn::layer> >& tiny_dnn::operator<<(T&, const tiny_dnn::layer_tuple<std::shared_ptr<tiny_dnn::layer> >&)
 inline const layer_tuple<std::shared_ptr<layer>> &operator<<(
                                                   ^
tiny-dnn/tiny_dnn/node.h:237:51: note:   template argument deduction/substitution failed:
exp.cpp:22:17: note:   cannot convert ‘relu’ (type ‘tiny_dnn::activation::relu() {aka tiny_dnn::relu_layer()}’) to type ‘const tiny_dnn::layer_tuple<std::shared_ptr<tiny_dnn::layer> >&’
     << conv1 << relu 
                 ^
In file included from tiny-dnn/tiny_dnn/core/backend.h:18:0,
                 from tiny-dnn/tiny_dnn/layers/layer.h:22,
                 from tiny-dnn/tiny_dnn/nodes.h:21,
                 from tiny-dnn/tiny_dnn/network.h:27,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/node.h:246:11: note: candidate: template<class T> T& tiny_dnn::operator<<(const tiny_dnn::layer_tuple<tiny_dnn::layer*>&, T&)
 inline T &operator<<(const layer_tuple<layer *> &lhs, T &rhs) {
           ^
tiny-dnn/tiny_dnn/node.h:246:11: note:   template argument deduction/substitution failed:
exp.cpp:22:5: note:   cannot convert ‘tiny_dnn::operator<<(input_layer1.tiny_dnn::input_layer::<anonymous>, conv1.tiny_dnn::convolutional_layer::<anonymous>)’ (type ‘tiny_dnn::layer’) to type ‘const tiny_dnn::layer_tuple<tiny_dnn::layer*>&’
     << conv1 << relu 
     ^
In file included from tiny-dnn/tiny_dnn/core/backend.h:18:0,
                 from tiny-dnn/tiny_dnn/layers/layer.h:22,
                 from tiny-dnn/tiny_dnn/nodes.h:21,
                 from tiny-dnn/tiny_dnn/network.h:27,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/node.h:254:36: note: candidate: template<class T> const tiny_dnn::layer_tuple<tiny_dnn::layer*>& tiny_dnn::operator<<(T&, const tiny_dnn::layer_tuple<tiny_dnn::layer*>&)
 inline const layer_tuple<layer *> &operator<<(T &lhs,
                                    ^
tiny-dnn/tiny_dnn/node.h:254:36: note:   template argument deduction/substitution failed:
exp.cpp:22:17: note:   cannot convert ‘relu’ (type ‘tiny_dnn::activation::relu() {aka tiny_dnn::relu_layer()}’) to type ‘const tiny_dnn::layer_tuple<tiny_dnn::layer*>&’
     << conv1 << relu 
                 ^
In file included from tiny-dnn/tiny_dnn/layers/layer.h:23:0,
                 from tiny-dnn/tiny_dnn/nodes.h:21,
                 from tiny-dnn/tiny_dnn/network.h:27,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/core/framework/device.fwd.h:24:22: note: candidate: std::ostream& tiny_dnn::operator<<(std::ostream&, tiny_dnn::device_t)
 inline std::ostream &operator<<(std::ostream &os, device_t type) {
                      ^
tiny-dnn/tiny_dnn/core/framework/device.fwd.h:24:22: note:   no known conversion for argument 1 from ‘tiny_dnn::layer’ to ‘std::ostream& {aka std::basic_ostream<char>&}’
In file included from tiny-dnn/tiny_dnn/nodes.h:21:0,
                 from tiny-dnn/tiny_dnn/network.h:27,
                 from tiny-dnn/tiny_dnn/tiny_dnn.h:11,
                 from exp.cpp:2:
tiny-dnn/tiny_dnn/layers/layer.h:890:15: note: candidate: tiny_dnn::layer& tiny_dnn::operator<<(tiny_dnn::layer&, tiny_dnn::layer&)
 inline layer &operator<<(layer &lhs, layer &rhs) {
               ^
tiny-dnn/tiny_dnn/layers/layer.h:890:15: note:   no known conversion for argument 2 from ‘tiny_dnn::activation::relu() {aka tiny_dnn::relu_layer()}’ to ‘tiny_dnn::layer&’
tiny-dnn/tiny_dnn/layers/layer.h:896:39: note: candidate: template<class Char, class CharTraits> std::basic_ostream<_CharT, _Traits>& tiny_dnn::operator<<(std::basic_ostream<_CharT, _Traits>&, const tiny_dnn::layer&)
 std::basic_ostream<Char, CharTraits> &operator<<(
                                       ^
tiny-dnn/tiny_dnn/layers/layer.h:896:39: note:   template argument deduction/substitution failed:
exp.cpp:22:17: note:   ‘tiny_dnn::layer’ is not derived from ‘std::basic_ostream<_CharT, _Traits>’
     << conv1 << relu 
